# Revenue

./: .gitignore  CHECKLIST.md  DEFENSE.md  HACKATHON_IDEA.md  README.md  READY_FOR_DEMO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  openapi.yaml  package-lock.json
.github/workflows/: backend.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6e77334ec2bb_initial_schema.py  b1a2c3d4e5f6_unique_telegram_user_id.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: ai.py  analytics.py  auth.py  dashboard.py  funnels.py  leads.py  messages.py  realtime.py  telegram.py  topics.py
backend/app/core/: config.py  database.py  events.py  security.py
backend/app/models/: __init__.py  base.py  funnel.py  lead.py  manager.py  message.py  topic.py
backend/app/schemas/: ai.py  auth.py  common.py  dashboard.py  funnel.py  lead.py  message.py  topic.py
backend/app/services/: ai.py  leads.py  scoring.py  telegram.py
backend/tests/: conftest.py  test_api.py
deploy/: Caddyfile
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  revenue-colors-preview.html
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: CommandPalette.tsx  LiveToast.tsx  LoginScreen.tsx
(+11 files in other folders)
